fixing button look on mobile

--- a/public/global.css
+++ b/public/global.css
@@ -1,8 +1,9 @@
 @font-face {
-  font-family: 'LabelFont';
-  src: url('LabelFont') format('woff'), /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
-   url('LabelFont.ttf') format('truetype'); /* Chrome 4+, Firefox 3.5, Opera 10+, Safari 3—5 */
-}  
+  font-family: "LabelFont";
+  src: url("LabelFont") format("woff"),
+    /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */ url("LabelFont.ttf")
+      format("truetype"); /* Chrome 4+, Firefox 3.5, Opera 10+, Safari 3—5 */
+}
 
 html,
 body {
@@ -22,8 +23,6 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
   background: #f7e2d6;
-
-  
 }
 
 a {
@@ -45,6 +44,7 @@ label {
 
 input,
 button,
+.button,
 select,
 textarea {
   font-family: inherit;
@@ -61,6 +61,7 @@ input:disabled {
   color: #ccc;
 }
 
+.button,
 button {
   color: #333;
   background-color: #f4f4f4;
@@ -68,15 +69,15 @@ button {
   cursor: pointer;
 }
 
-button:disabled {
+.button:disabled {
   color: #999;
 }
 
-button:not(:disabled):active {
+.button:not(:disabled):active {
   background-color: #ddd;
 }
 
-button:focus {
+.button:focus {
   border-color: #666;
 }
 
@@ -86,4 +87,3 @@ body {
   padding: 0;
   overflow: hidden;
 }
-
